--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -261,7 +261,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginBottom="20dp"
             android:layout_marginEnd="4dp"
-            android:background="#9aaab4"
+            android:background="@drawable/border_style"
             app:layout_constraintBottom_toTopOf="@+id/btPilih2"
             app:layout_constraintEnd_toEndOf="parent" />
 
