--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -280,7 +280,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="16dp"
-            android:background="#9aaab4"
+            android:background="@drawable/border_style"
             app:layout_constraintBottom_toTopOf="@+id/btPilih"
             app:layout_constraintEnd_toEndOf="parent" />
 
