--- a/SokaJamur/app/src/main/res/layout/nav_header_home_admin.xml
+++ b/SokaJamur/app/src/main/res/layout/nav_header_home_admin.xml
@@ -14,14 +14,16 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="97dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/icon" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/skranji_bold"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Soka Jamur"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -30,6 +32,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/skranji"
         android:text="admin@sokajamur.com" />
 
 </LinearLayout>
