--- a/SokaJamur/app/src/main/res/layout/activity_login.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
             android:ems="10"
             android:fontFamily="@font/skranji"
             android:hint="No. Hp"
-            android:inputType="number"
+            android:inputType="text"
             app:layout_constraintBottom_toTopOf="@+id/isianPass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -120,20 +120,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
-        android:layout_marginEnd="288dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:text="Coba Admin"
-        android:onClick="coba"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
 </android.support.constraint.ConstraintLayout>
